--- a/frontend/src/-assets/scss/global/_variables.scss
+++ b/frontend/src/-assets/scss/global/_variables.scss
@@ -8,4 +8,5 @@
 $breakpoint: 900;
 
 // font
-$commonFont: -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+$commonFont: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo,
+  sans-serif;
