--- a/frontend/src/-assets/scss/style.scss
+++ b/frontend/src/-assets/scss/style.scss
@@ -3,12 +3,12 @@
 /* ============================================================
   Foundation
 ============================================================= */
-@use "./foundation";
+@use './foundation';
 
 /* ============================================================
   Layout
 ============================================================= */
-@use "./layout";
+@use './layout';
 
 /* ============================================================
   Object
@@ -17,20 +17,20 @@
 /* ---------------------------------------
   Component
 --------------------------------------- */
-@use "./object/component";
+@use './object/component';
 
 /* ---------------------------------------
   Project
 --------------------------------------- */
-@use "./object/project";
+@use './object/project';
 
 /* ---------------------------------------
   Utility
 --------------------------------------- */
-@use "./object/utility";
+@use './object/utility';
 
 /* ============================================================
   Page
 ============================================================= */
 
-@use "./page";
+@use './page';
