--- a/frontend/src/-assets/scss/object/component/_scrollBtn.scss
+++ b/frontend/src/-assets/scss/object/component/_scrollBtn.scss
@@ -5,20 +5,21 @@
 
 @use '../../global' as g;
 
-.c-scrollBtn{
-  @include g.fixed($r:0,$b:0);
-  z-index:2;
+.c-scrollBtn {
+  @include g.fixed($r: 0, $b: 0);
+  z-index: 2;
   width: 70px;
   height: 70px;
   background: #000;
-  cursor:pointer;
-  @include g.after{
-    @include g.absolute(0,0,0,0);
+  cursor: pointer;
+  @include g.after {
+    @include g.absolute(0, 0, 0, 0);
     margin: auto;
     border-top: 3px solid #fff;
     border-right: 3px solid #fff;
     width: 20px;
     height: 20px;
-    transform: rotate(-45deg) translate(-3px,2px);
+    rotate: -45deg;
+    translate: (-3px, 2px);
   }
 }
