--- a/frontend/src/-assets/scss/object/component/_title.scss
+++ b/frontend/src/-assets/scss/object/component/_title.scss
@@ -5,8 +5,8 @@
 
 @use '../../global' as g;
 
-.c-title{
-  @include g.fs(30,30);
+.c-title {
+  @include g.fs(30, 30);
   text-align: center;
   margin: 0 0 50px;
 }
