--- a/frontend/src/-assets/scss/object/project/_list.scss
+++ b/frontend/src/-assets/scss/object/project/_list.scss
@@ -5,34 +5,34 @@
 
 @use '../../global' as g;
 
-.p-list{
-  color:#000;
+.p-list {
+  color: #000;
 }
 
-.p-list__child{
+.p-list__child {
   border-bottom: 1px solid #999;
   padding: 5px 0;
-  &:first-of-type{
+  &:first-of-type {
     border-top: 1px solid #999;
   }
 }
 
-.p-list__link{
-  display:block;
-  text-decoration:none;
+.p-list__link {
+  display: block;
+  text-decoration: none;
   padding: 0 0 0;
 }
-.p-list__info{
-  @include g.flex($ai:center);
-  time{
-    display:block;
+.p-list__info {
+  @include g.flex($ai: center);
+  time {
+    display: block;
     margin-right: 5px;
   }
-  span{
-    @include g.fs(10,10);
+  span {
+    @include g.fs(10, 10);
     display: block;
-    border:1px solid #000;
-    padding:2px;
-    border-radius:5px;
+    border: 1px solid #000;
+    padding: 2px;
+    border-radius: 5px;
   }
 }
