--- a/frontend/src/-assets/scss/page/_top.scss
+++ b/frontend/src/-assets/scss/page/_top.scss
@@ -3,17 +3,17 @@
 // top
 ////////////////////////
 
-@use '../global' as g;
+@use '../global' as *;
 
 .pg-top {
 }
 
 .pg-top-kv {
-  @include g.relative;
+  @include relative;
   height: 300px;
   margin-bottom: 100px;
   video {
-    @include g.absolute($t: 0, $l: 0);
+    @include absolute($t: 0, $l: 0);
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -21,10 +21,10 @@
 }
 
 .pg-top-section {
-  @include g.pc {
+  @include pc {
     margin: 0 80px 100px;
   }
-  @include g.sp {
+  @include sp {
     margin: 0 20px 50px;
   }
 }
