--- a/frontend/src/-assets/scss/layout/_header.scss
+++ b/frontend/src/-assets/scss/layout/_header.scss
@@ -6,8 +6,12 @@
 @use '../global' as *;
 
 .l-header {
-  @include flex($ai: center, $jc: space-between);
-  @include fixed($l: 0, $t: 0);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  left: 0;
+  top: 0;
   z-index: 10;
   width: 100%;
   height: 100px;
@@ -32,7 +36,9 @@
 .l-header__nav {
   margin-right: 50px;
   ul {
-    @include flex($ai: center, $jc: flex-end);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     width: 300px;
   }
   li:not(:last-of-type) {
