--- a/frontend/src/-assets/scss/global/mixins/_font-family.scss
+++ b/frontend/src/-assets/scss/global/mixins/_font-family.scss
@@ -3,12 +3,12 @@
 // font-family
 //////////////////////////////////////////
 
-@mixin noto1{
-  font-family: $commonFont;
+@mixin noto1 {
+  font-family: var(--commonFont);
   font-weight: 700;
 }
 
-@mixin noto2{
-  font-family: $commonFont;
+@mixin noto2 {
+  font-family: var(--commonFont);
   font-weight: 900;
 }
