--- a/frontend/src/-assets/scss/foundation/_reset.scss
+++ b/frontend/src/-assets/scss/foundation/_reset.scss
@@ -184,3 +184,12 @@ button {
   padding: 0;
   border: 0;
 }
+
+img {
+  width: 100%;
+  vertical-align: bottom;
+}
+
+a[href^='tel:'] {
+  pointer-events: none;
+}
