--- a/frontend/src/-assets/scss/object/utility/_index.scss
+++ b/frontend/src/-assets/scss/object/utility/_index.scss
@@ -1,24 +1,1 @@
-@charset "UTF-8";
-////////////////////////
-// utility
-////////////////////////
-
-@use '../../global' as *;
-
-.u-pcbr {
-  @include pc {
-    display: block;
-  }
-  @include sp {
-    display: none;
-  }
-}
-
-.u-spbr {
-  @include pc {
-    display: none;
-  }
-  @include sp {
-    display: block;
-  }
-}
+@forward './br';
