--- a/frontend/src/-assets/scss/object/component/_scrollBtn.scss
+++ b/frontend/src/-assets/scss/object/component/_scrollBtn.scss
@@ -6,6 +6,9 @@
 @use '../../global' as *;
 
 .c-scrollBtn {
+  position: fixed;
+  right: 0;
+  bottom: 0;
   z-index: 2;
   width: 70px;
   height: 70px;
