--- a/frontend/src/-assets/include/_scripts.ejs
+++ b/frontend/src/-assets/include/_scripts.ejs
@@ -1,4 +1,2 @@
 <script src="<%= relativePath %>-assets/js/vendor.bundle.js?date=<%= time %>"></script>
-<script src="<%= relativePath %>-assets/js/utils.bundle.js?date=<%= time %>"></script>
-<script src="<%= relativePath %>-assets/js/common.bundle.js?date=<%= time %>"></script>
-<script src="<%= relativePath %>-assets/js/<%= page.script %>.bundle.js?date=<%= time %>"></script>
+<script src="<%= relativePath %>-assets/js/script.bundle.js?date=<%= time %>"></script>
