--- a/frontend/src/-assets/include/share/_footer.ejs
+++ b/frontend/src/-assets/include/share/_footer.ejs
@@ -2,7 +2,7 @@
 <footer class="l-footer">
   <p class="l-footer__logo">
     <a href='/'>
-      <%- include('./svg/logo_white.svg'); -%>
+      <%- include('../svg/logo_white.svg'); -%>
     </a>
   </p>
   <div class="l-footer__inner">
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="l-footer__copyright">
-    <small>Copyright © 2021 htmlgo All rights reserved.</small>
+    <small>Copyright © 2023 htmlgo All rights reserved.</small>
   </div>
 </footer>
 <!--/ footer -->
