--- a/frontend/src/-assets/include/share/_header.ejs
+++ b/frontend/src/-assets/include/share/_header.ejs
@@ -2,7 +2,7 @@
 <header class="l-header">
   <p class="l-header__logo">
     <a href='/'>
-      <%- include('./svg/logo_black.svg'); -%>
+      <%- include('../svg/logo_black.svg'); -%>
     </a>
   </p>
   <nav class="l-header__nav">
