--- a/frontend/src/-assets/include/share/_layoutUpper.ejs
+++ b/frontend/src/-assets/include/share/_layoutUpper.ejs
@@ -1,3 +1,3 @@
-<%- include( '_functions' ); -%>
+<%- include( '../utils/_functions' ); -%>
 <%- include( '_head', {page}); -%>
 <%- include( '_header', {page}); -%>
